feat: implement CRUD for handling sample data
