# src/main/java/no/metatrack/server/sample/CSVUploadRowError.java
@@ -1,0 +1,3 @@
+package no.metatrack.server.sample;
+
+public record CSVUploadRowError(String sampleName, String errorColumn, String errorMessage) {}
