# src/main/resources/META-INF/resources/openapi.json
@@ -29,6 +29,84 @@
           }
         }
       },
+      "CreateSampleRequest" : {
+        "type" : "object",
+        "required" : [ "name", "alias", "taxId", "mlst", "isolationSource", "collectionDate", "location", "sequencingLab", "institution", "hostHealthState" ],
+        "properties" : {
+          "name" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "alias" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "taxId" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "hostTaxId" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "mlst" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "isolationSource" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "collectionDate" : {
+            "type" : "string",
+            "pattern" : "\\S",
+            "$ref" : "#/components/schemas/LocalDate"
+          },
+          "location" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "sequencingLab" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "institution" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "hostHealthState" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          }
+        }
+      },
+      "File" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int64"
+          },
+          "uuid" : {
+            "$ref" : "#/components/schemas/UUID"
+          },
+          "fileName" : {
+            "type" : "string"
+          },
+          "virtualPath" : {
+            "type" : "string"
+          },
+          "objectKey" : {
+            "type" : "string"
+          },
+          "status" : {
+            "$ref" : "#/components/schemas/UploadStatus"
+          },
+          "sample" : {
+            "$ref" : "#/components/schemas/Sample"
+          }
+        }
+      },
       "HealthStatusResponse" : {
         "type" : "object",
         "properties" : {
@@ -41,6 +119,11 @@
         "type" : "string",
         "format" : "date-time",
         "examples" : [ "2022-03-10T16:15:50Z" ]
+      },
+      "LocalDate" : {
+        "type" : "string",
+        "format" : "date",
+        "examples" : [ "2022-03-10" ]
       },
       "MinioEvent" : {
         "type" : "object",
@@ -65,6 +148,57 @@
           },
           "eTag" : {
             "type" : "string"
+          }
+        }
+      },
+      "PatchSampleRequest" : {
+        "type" : "object",
+        "required" : [ "name", "alias", "mlst", "isolationSource", "collectionDate", "location", "sequencingLab", "institution", "hostHealthState" ],
+        "properties" : {
+          "name" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "alias" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "taxId" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "hostTaxId" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "mlst" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "isolationSource" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "collectionDate" : {
+            "type" : "string",
+            "pattern" : "\\S",
+            "$ref" : "#/components/schemas/LocalDate"
+          },
+          "location" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "sequencingLab" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "institution" : {
+            "type" : "string",
+            "pattern" : "\\S"
+          },
+          "hostHealthState" : {
+            "type" : "string",
+            "pattern" : "\\S"
           }
         }
       },
@@ -122,6 +256,62 @@
           }
         }
       },
+      "Project" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int64"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "description" : {
+            "type" : "string"
+          },
+          "owner" : {
+            "$ref" : "#/components/schemas/UUID"
+          },
+          "createdOn" : {
+            "$ref" : "#/components/schemas/Instant"
+          },
+          "modifiedOn" : {
+            "$ref" : "#/components/schemas/Instant"
+          },
+          "projectMembers" : {
+            "type" : "array",
+            "uniqueItems" : true,
+            "items" : {
+              "$ref" : "#/components/schemas/ProjectMember"
+            }
+          },
+          "samples" : {
+            "type" : "array",
+            "uniqueItems" : true,
+            "items" : {
+              "$ref" : "#/components/schemas/Sample"
+            }
+          }
+        }
+      },
+      "ProjectMember" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int64"
+          },
+          "memberId" : {
+            "$ref" : "#/components/schemas/UUID"
+          },
+          "role" : {
+            "$ref" : "#/components/schemas/ProjectRole"
+          },
+          "project" : {
+            "$ref" : "#/components/schemas/Project"
+          }
+        }
+      },
       "ProjectResponse" : {
         "type" : "object",
         "properties" : {
@@ -166,6 +356,65 @@
           }
         }
       },
+      "Sample" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "$ref" : "#/components/schemas/UUID"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "alias" : {
+            "type" : "string"
+          },
+          "taxId" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "hostTaxId" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "mlst" : {
+            "type" : "string"
+          },
+          "isolationSource" : {
+            "type" : "string"
+          },
+          "collectionDate" : {
+            "$ref" : "#/components/schemas/LocalDate"
+          },
+          "location" : {
+            "type" : "string"
+          },
+          "sequencingLab" : {
+            "type" : "string"
+          },
+          "institution" : {
+            "type" : "string"
+          },
+          "hostHealthState" : {
+            "type" : "string"
+          },
+          "createdOn" : {
+            "$ref" : "#/components/schemas/Instant"
+          },
+          "modifiedOn" : {
+            "$ref" : "#/components/schemas/Instant"
+          },
+          "project" : {
+            "$ref" : "#/components/schemas/Project"
+          },
+          "files" : {
+            "type" : "array",
+            "uniqueItems" : true,
+            "items" : {
+              "$ref" : "#/components/schemas/File"
+            }
+          }
+        }
+      },
       "UUID" : {
         "type" : "string",
         "format" : "uuid",
@@ -181,6 +430,10 @@
             "type" : "string"
           }
         }
+      },
+      "UploadStatus" : {
+        "type" : "string",
+        "enum" : [ "PENDING", "UPLOADED" ]
       },
       "UserResponse" : {
         "type" : "object",
@@ -495,6 +748,316 @@
         },
         "summary" : "Add Member",
         "tags" : [ "Project Controller" ],
+        "security" : [ {
+          "SecurityScheme" : [ ]
+        } ]
+      }
+    },
+    "/api/projects/{projectId}/samples" : {
+      "get" : {
+        "parameters" : [ {
+          "name" : "projectId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int64"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/Sample"
+                  }
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
+          }
+        },
+        "summary" : "Get All Samples",
+        "tags" : [ "Sample Controller" ],
+        "security" : [ {
+          "SecurityScheme" : [ ]
+        } ]
+      },
+      "post" : {
+        "parameters" : [ {
+          "name" : "projectId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int64"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/CreateSampleRequest"
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Sample"
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
+          },
+          "400" : {
+            "description" : "Bad Request"
+          }
+        },
+        "summary" : "Create Sample",
+        "tags" : [ "Sample Controller" ],
+        "security" : [ {
+          "SecurityScheme" : [ ]
+        } ]
+      }
+    },
+    "/api/projects/{projectId}/samples/name/{sampleName}" : {
+      "get" : {
+        "parameters" : [ {
+          "name" : "projectId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int64"
+          }
+        }, {
+          "name" : "sampleName",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Sample"
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
+          }
+        },
+        "summary" : "Get Sample By Name",
+        "tags" : [ "Sample Controller" ],
+        "security" : [ {
+          "SecurityScheme" : [ ]
+        } ]
+      }
+    },
+    "/api/projects/{projectId}/samples/samplesheet" : {
+      "post" : {
+        "parameters" : [ {
+          "name" : "projectId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int64"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "multipart/form-data" : {
+              "schema" : {
+                "type" : "object",
+                "properties" : {
+                  "file" : {
+                    "type" : "string",
+                    "format" : "binary"
+                  }
+                }
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : { }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
+          }
+        },
+        "summary" : "Import CSV",
+        "tags" : [ "Sample Controller" ],
+        "security" : [ {
+          "SecurityScheme" : [ ]
+        } ]
+      }
+    },
+    "/api/projects/{projectId}/samples/{sampleId}" : {
+      "patch" : {
+        "parameters" : [ {
+          "name" : "projectId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int64"
+          }
+        }, {
+          "name" : "sampleId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/components/schemas/UUID"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/PatchSampleRequest"
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : { }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
+          }
+        },
+        "summary" : "Update Sample",
+        "tags" : [ "Sample Controller" ],
+        "security" : [ {
+          "SecurityScheme" : [ ]
+        } ]
+      },
+      "get" : {
+        "parameters" : [ {
+          "name" : "projectId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int64"
+          }
+        }, {
+          "name" : "sampleId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/components/schemas/UUID"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Sample"
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
+          }
+        },
+        "summary" : "Get Sample",
+        "tags" : [ "Sample Controller" ],
+        "security" : [ {
+          "SecurityScheme" : [ ]
+        } ]
+      },
+      "delete" : {
+        "parameters" : [ {
+          "name" : "projectId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int64"
+          }
+        }, {
+          "name" : "sampleId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/components/schemas/UUID"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : { }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Not Authorized"
+          },
+          "403" : {
+            "description" : "Not Allowed"
+          }
+        },
+        "summary" : "Delete Sample",
+        "tags" : [ "Sample Controller" ],
         "security" : [ {
           "SecurityScheme" : [ ]
         } ]
